--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,15 @@
 #------------------------------------------------------------
 
 # Which carpentry is this ("swc", "dc", or "lc")?
-carpentry: "dc"
+#carpentry: "dc"
 
 # Overall title for pages.
-title: "Open Refine for Ecology"
+title: "Introduction to OpenRefine (based on OpenRefine for Ecology)"
 
 # Contact.  This *must* include the protocol: if it's an email
 # address, it must look like "mailto:lessons@software-carpentry.org",
 # or if it's a URL, "https://gitter.im/username/ProjectName".
-contact: "mailto:lessons@datacarpentry.org"
+contact: "mailto:kristin.lee@tufts.edu"
 
 #------------------------------------------------------------
 # Generic settings (should not need to change).
